# chart-svg-dev

./: .gitignore  cabal.project  chart-svg-dev.cabal  chart-svg-dev.org  checklist.org  gallery.html  gallery.org  kaggle.org  readme.md  readme.org
app/: diff.hs
src/: Lib.hs
src/Chart/: Dev.hs
