cabal-version: 3.4
name:          chart-svg-dev
version:       0.0.1.0
synopsis: See readme
description: See readme for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Copyrite, Tony Day, 2023-
license: BSD-3-Clause
homepage: https://github.com/tonyday567/chart-svg-dev#readme
bug-reports: https://github.com/tonyday567/chart-svg-dev/issues
build-type: Simple
tested-with: GHC == 9.6.2
source-repository head
  type: git
  location: https://github.com/tonyday567/chart-svg-dev

common ghc2021-stanza
    default-language: GHC2021

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

library
  import: ghc2021-stanza
  import: ghc-options-stanza
  hs-source-dirs:
    src
  default-extensions:
  build-depends:
    base >= 4.14 && <5,
    chart-svg,
    prettychart,
    faker,
    optics-core,
    bytestring,
    text,
    numhask,
    numhask-space >= 0.12 && <0.13,
    mtl,
    random,
    prettyprinter,
    pretty-simple,
    mwc-random,
    markup-parse,
    dotparse,
    string-interpolate,
  exposed-modules:
    Chart.Dev

common ghc-options-exe-stanza
    ghc-options:
        -fforce-recomp
        -funbox-strict-fields
        -rtsopts
        -threaded
        -with-rtsopts=-N

executable chart-svg-example-diff
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: diff.hs
    hs-source-dirs: app
    build-depends:
        , chart-svg
        , markup-parse
        , numhask >=0.10 && <0.12
        , tasty-golden
        , base
        , tasty
        , tree-diff
        , bytestring
        , string-interpolate
